# meme-retriever

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  models-manifest.json  package-lock.json  package.json  runtime-manifest.json  vite.config.ts
.husky/: pre-commit
app_data/: knowledge_base.json
docs/: PRD.md  RELEASE.md  SETUP.md  SETUP_WINDOWS.md  USER_GUIDE.md  architecture.md  prd.md  scoring.md
scripts/: package-models.sh  setup-linux.sh  setup-windows.ps1
specs/: 5_1_1.md  5_1_2.md  5_1_3.md  5_1_4.md  5_2_1.md  5_2_2.md  5_2_3.md  5_2_4.md  5_3_1.md  5_3_2.md  5_3_2_1.md  5_3_2_2.md  5_3_2_3.md  5_3_2_4.md  5_4_1.md  5_5_1.md  5_5_2.md  5_6_1.md  5_6_2.md  5_6_3.md  5_7_1.md  README.md  glossary.md  spec.md  ui-guidelines.md
src/: App.vue  main.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_fts_trigram.sql  0003_hash_dedup.sql  0004_file_status.sql  0005_task_queue.sql  0006_structured_tags.sql  0007_home_state.sql  0008_task_queue_batch_result.sql
src-tauri/src/: config.rs  image_io.rs  lib.rs  main.rs  runtime_paths.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  repo.rs  task_repo.rs
src-tauri/src/indexer/: hash.rs  index_features.rs  mod.rs  ocr.rs  pipeline.rs  reindex.rs  thumbnail.rs
src-tauri/src/kb/: example_index.rs  local.rs  maintenance.rs  mod.rs  provider.rs
src-tauri/src/ml/: clip.rs  mod.rs  tokenizer.rs
src-tauri/src/search/: engine.rs  keyword.rs  mod.rs  vector_store.rs
src-tauri/tests/: e2e_test.rs
(+117 files in other folders)
